fix image distortion

--- a/html_css_practice/3_miniprojects_grid/style.css
+++ b/html_css_practice/3_miniprojects_grid/style.css
@@ -223,6 +223,7 @@ Tiles
   }
   .tiles img {
     height: 100%;
+    object-fit: cover;
   }
   .tile-1 {
     grid-area: a;
